Fixed #2091 - TieredMenu sub-items are not visible when there's not enough space on the right side

--- a/src/components/tieredmenu/TieredMenu.css
+++ b/src/components/tieredmenu/TieredMenu.css
@@ -41,3 +41,7 @@
     left: 100%;
     top: 0;
 }
+
+.p-tieredmenu .p-menuitem-active > .p-submenu-list-flipped {
+    left: -100%;
+}
